...
          closeLabel="Close"
        />
        <Body style={{ color: ink.soft, lineHeight: 19 }}>
          Whatever you actually call yourselves. You can change it later.
        </Body>
        <Field
          label="Group name"
          placeholder="Saturday Dogs"
          value={groupName}
          onChangeText={setGroupName}
          autoFocus
          returnKeyType="done"
        />
        <PrimaryButton
...
